Mon Oct  7 22:52:45 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-space-can-be-expanded-p):
	  Return nil to avoid "end" insertion when in smartparens-mode
	  that is configured to insert "end" for the same keyword.

	* misc/ruby-electric.el (ruby-electric-keywords): New custom
	  variable to replace `ruby-electric-simple-keywords-re` with.

Mon Oct  7 22:52:16 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el: Use preceding-char/following-char
	  (returning 0 at BOF/EOF) instead of char-before/char-after
	  (returning nil at BOF/EOF) to avoid error from char-syntax when
	  at BOF/EOF.

Mon Oct  7 22:45:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (FIBER_USE_NATIVE): split long conditions.

Mon Oct  7 20:29:31 2013  Zachary Scott  <e@zzak.io>

	* lib/time.rb: [DOC] typo in Time.rb overview by @srt32 [Fixes GH-416]
	  https://github.com/ruby/ruby/pull/416

Mon Oct  7 20:07:20 2013  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.strptime): Use :offset.
	  Patch by Felipe Contreras.  [ruby-core:57694]

Mon Oct  7 16:47:27 2013  Koichi Sasada  <ko1@atdot.net>

	* test/-ext-/debug/test_profile_frames.rb: rename class C to
	  something long name because one test depends on absence of
	  class ::C.

Mon Oct  7 16:33:10 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/-test-/debug/profile_frames.c:
	  test/-ext-/debug/test_profile_frames.rb: add a test for new C-APIs.

Mon Oct  7 16:12:36 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/debug.h: add backtrace collecting APIs for profiler.
	  * int rb_profile_frames(int start, int limit, VALUE *buff, int *lines);
	    Collect information of frame information.

	  * VALUE rb_profile_frame_path(VALUE frame);
	  * VALUE rb_profile_frame_absolute_path(VALUE frame);
	  * VALUE rb_profile_frame_label(VALUE frame);
	  * VALUE rb_profile_frame_base_label(VALUE frame);
	  * VALUE rb_profile_frame_first_lineno(VALUE frame);