@@ -1,3 +1,8 @@
+Tue Oct  8 00:14:53 2013  Akinori MUSHA  <knu@iDaemons.org>
+
+	* misc/ruby-additional.el: Add a standard header and footer,
+	  including (provide 'ruby-additional).
+
 Mon Oct  7 22:52:45 2013  Akinori MUSHA  <knu@iDaemons.org>
 
 	* misc/ruby-electric.el (ruby-electric-space-can-be-expanded-p):
